wrap plus fix

--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,13 @@ aside,
 #code {
 	border: 1px solid var(--border);
 	border-radius: 5px;
+	padding-left: 50px;
+	overflow-x: auto;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	word-wrap: break-word;
 }
 
 
